[tool.poetry]
name = "cdip_connector"
version = "1.5.1"
description = "SMART Integrate Connector Library"
authors = [
    "Rohit Chaudhri <rohitc@vulcan.com>",
    "Matt Morrissette <matt.morrissette@wildlifeprotectionsolutions.org>",
    "Chris Doehring <chrisdo@earthranger.com>",
    "Victor H. Garcia <victorg@earthranger.com>"
]

license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
gundi-client = "^1.0.0"
environs= "^9.3.0"
python-dateutil= "^2.8.1"
python-json-logger= "^2.0.1"
statsd = "^3.3.0"
pydantic = "^1.7.3"
google-cloud-pubsub = "^2.5.0"
google-cloud-storage = "^1.42.0"
confluent-kafka="^1.9.0"
Pillow="^9.2.0"
opentelemetry-api = "^1.14.0"
opentelemetry-sdk = "^1.14.0"
opentelemetry-exporter-gcp-trace = "^1.3.0"
opentelemetry-propagator-gcp = "^1.3.0"
opentelemetry-instrumentation-requests = "^0.35b0"
opentelemetry-exporter-otlp-proto-http = "^1.14.0"
opentelemetry-instrumentation-confluent-kafka = "^0.35b0"
opentelemetry-instrumentation-httpx = "^0.35b0"
gundi-core = "^1.0.5"



[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^23.1.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
