[project]
name = "cdip_connector"
version = "1.7.1"
description = "SMART Integrate Connector Library"
authors = [
    { name = "Rohit Chaudhri", email = "rohitc@vulcan.com" },
    { name = "Matt Morrissette", email = "matt.morrissette@wildlifeprotectionsolutions.org" },
    { name = "Chris Doehring", email = "chrisdo@earthranger.com" },
    { name = "Victor H. Garcia", email = "victorg@earthranger.com" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.1,<3",
    "gundi-client>=1.0.4,<2",
    "environs>=9.3.0,<10",
    "python-dateutil>=2.8.1,<3",
    "python-json-logger>=3.0.0,<4",
    "statsd>=3.3.0,<4",
    "pydantic>=1.7.3,<2",
    "google-cloud-pubsub>=2.5.0,<3",
    "google-cloud-storage>=1.42.0,<2",
    "Pillow>=9.2.0,<10",
    "opentelemetry-api>=1.14.0,<2",
    "opentelemetry-sdk>=1.14.0,<2",
    "opentelemetry-exporter-gcp-trace>=1.3.0,<2",
    "opentelemetry-propagator-gcp>=1.3.0,<2",
    "opentelemetry-instrumentation-requests>=0.35b0,<1",
    "opentelemetry-exporter-otlp-proto-http>=1.14.0,<2",
    "opentelemetry-instrumentation-httpx>=0.35b0,<1",
    "gundi-core>=1.0.5,<2",
    "marshmallow>=3.13,<4",
    "backoff>=2.0,<3",
]

[dependency-groups]
dev = [
    "pylint>=2.6.0,<3",
    "black>=23.1.0,<24",
    "pytest>=7.2.1,<8",
    "pytest-asyncio>=0.20.3,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["cdip_connector"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
